Partially implemented filtering, improved ui with init animations, replaced img slider lib to splide, added tabs to product view